Fixing spacing after new logo

--- a/course.css
+++ b/course.css
@@ -102,7 +102,7 @@ header.fixed {
 .syllabus-container {
     position: relative;
     z-index: 2;
-    padding: 2rem;
+    padding: 1rem;
     box-sizing: border-box;
 }
 
